--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,11 @@
 
 .card-img {
     object-fit: cover;
-    height: 150px;
+    flex-basis: 200px;
+    min-width: 0;
+    min-height: 0;
+    
+    background: yellow;
 }
 
 .card-content {
@@ -62,4 +66,32 @@
     font-weight: 700;
     display: block;
     font-size: 1.25em;
+}
+
+@media (min-width: 600px) {
+    .card {
+        flex-direction: row;
+    }
+    
+    .card-img {
+        height: 300px;
+    }
+    
+    .card-content {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .card-title {
+        font-size: 2.25rem
+    }
+    
+    .card-body {
+        font-size: 1.125rem;
+        max-width: 500px;
+    }
+    
+    .card-footer {
+        margin-top: auto;
+    }
 }
