--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,13 @@
+body {
+    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .card {
     width: 90%;
-    margin: 0 auto;
     max-width: 800px;
     background: #111d4a;
     color: #fff;
